# valentina-web

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  codecov.yml  compose.yaml  duties.py  gitleaks.toml  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.claude/skills/: vclient-guide
.github/: dependabot.yml
.github/actions/setup_python_env/: action.yml
.github/workflows/: commit-linter.yml  create-release.yml  reusable-tests.yml  test-docker-build.yml
docs/: oauth-apple.md  oauth-discord.md  oauth-github.md  oauth-google.md
scripts/: dev_server.py  docker_entry.sh
src/vweb/: __init__.py  app.py  config.py  constants.py  extensions.py
src/vweb/lib/: __init__.py  api.py  audit_log.py  base_notes.py  blueprint_cache.py  campaign_content_cache.py  catalog.py  character_list.py  character_sheet.py  crud_view.py  errors.py  global_context.py  guards.py  hooks.py  htmx.py  image_uploads.py  jinja.py  jinja_filters.py  log_config.py  oauth_setup.py  options_cache.py  security.py  statistics_cache.py  system_status_cache.py  user_display.py  user_profile.py
src/vweb/lib/cache/: __init__.py  base.py  blueprint.py  campaign_content.py  character_sheet.py  dicerolls.py  dictionary.py  global_context.py  options.py  statistics.py  system_status.py
src/vweb/lib/crud/: __init__.py  handler.py  routing.py  view.py
src/vweb/routes/: __init__.py
src/vweb/routes/admin/: __init__.py  audit_log_services.py  services.py  views.py
src/vweb/routes/auth/: __init__.py  apple_oauth.py  services.py  views.py  views_identity.py  views_oauth.py
src/vweb/routes/book/: __init__.py  handlers.py  views.py  views_notes.py
src/vweb/routes/campaign/: __init__.py  views.py
src/vweb/routes/campaign_notes/: __init__.py  handlers.py  views.py
src/vweb/routes/chapter/: __init__.py  handlers.py  views.py  views_notes.py
src/vweb/routes/character_create/: __init__.py  autogen_services.py  autogen_views.py  manual_services.py  manual_views.py  picker_services.py  picker_views.py  profile.py  profile_form.py
src/vweb/routes/character_list/: __init__.py  services.py  views.py
src/vweb/routes/character_trait_edit/: __init__.py  views.py
src/vweb/routes/character_view/: __init__.py  handlers_inventory.py  handlers_notes.py  views.py  views_inventory.py  views_notes.py
src/vweb/routes/company_hub/: __init__.py  views.py
src/vweb/routes/diceroll/: __init__.py  services.py  views.py
src/vweb/routes/dictionary/: __init__.py  cache.py  services.py  views.py
src/vweb/routes/fragments_shared_cards/: __init__.py  character_list.py  views.py
src/vweb/routes/index/: __init__.py  views.py
src/vweb/routes/player_list/: __init__.py  services.py  views.py
src/vweb/routes/profile/: __init__.py  handlers.py  views.py  views_quickrolls.py
src/vweb/routes/settings/: services.py  views.py
src/vweb/routes/static_files/: __init__.py  views.py
src/vweb/static/css/: input.css
src/vweb/static/js/: dice-tumble.js  section-nav.js  theme.js
src/vweb/templates/errors/: ErrorPage.jinja
src/vweb/templates/partials/: crud_refetch.html
src/vweb/templates/shared/: CharacterLinks.jinja  CharacterPicker.jinja  CharacterTypeBadge.jinja  CommonButton.jinja  ExperienceForm.jinja  ImageCarousel.jinja  LazyFragment.jinja  LogoutForm.jinja  PageHeader.jinja  PageLayout.jinja  PingBadge.jinja  PrevNextNav.jinja  UserAvatar.jinja  UserProviderBadges.jinja
src/vweb/templates/shared/cards/: AuditLog.jinja  CharacterListCard.jinja  NumberedListCard.jinja  Pagination.jinja  RecentDiceRolls.jinja  Statistics.jinja  StatisticsCard.jinja
src/vweb/templates/shared/crud/: CrudForm.jinja  (+5 more)
src/vweb/utils/: __init__.py  strings.py
tests/: __init__.py  conftest.py  helpers.py  test_admin_audit_log_routes.py  test_admin_audit_log_services.py  test_api.py  test_apple_oauth.py  test_audit_log.py  test_auth_guard.py  test_auth_link_identity.py  test_auth_routes.py  test_auth_routes_multi_company.py  test_auth_service.py  test_auth_unlink_identity.py  test_blueprint_cache.py  test_book_crud.py  test_book_images.py  test_book_notes_handler.py  test_book_view.py  test_button_component.py  test_cache_base.py  test_campaign_content_cache.py  test_campaign_routes.py  test_chapter_crud.py  test_chapter_images.py  test_chapter_notes_handler.py  test_chapter_view.py  test_character_create_routes.py  test_character_create_service.py  test_character_images.py  test_character_inventory_handler.py  test_character_list.py  test_character_manual_create_routes.py  test_character_notes_handler.py  test_character_profile_service.py  test_character_sheet_cache.py  test_character_trait_edit.py  test_character_view.py  test_character_view_inventory_crud.py  test_character_view_notes_crud.py  (+29 more)
tests/cache/: __init__.py  test_cache_base.py  test_dictionary_cache.py  test_options_cache.py  test_statistics_cache.py
tests/lib/: __init__.py  test_api.py  test_button_component.py  test_character_list.py  test_config.py  test_errors.py  test_guards.py  test_helpers.py  test_jinja.py  test_link_terms.py  test_security_headers.py
tests/routes/: __init__.py  test_admin_audit_log_routes.py  test_apple_oauth.py  test_audit_log.py  test_auth_guard.py  test_auth_link_identity.py  test_auth_routes.py  test_auth_routes_multi_company.py  test_auth_unlink_identity.py  test_book_crud.py  test_book_view.py  test_campaign_routes.py  test_chapter_crud.py  test_chapter_view.py  test_character_create_routes.py  test_character_inventory_handler.py  test_character_list.py  test_character_manual_create_routes.py  test_character_profile_service.py  test_character_trait_edit.py  test_character_view.py  test_character_view_inventory_crud.py  test_character_view_notes_crud.py  test_dictionary_service.py  test_fragments_shared_cards.py  test_images.py  test_notes_handlers.py  test_profile_crud.py  test_quickroll_handler.py  test_settings_routes.py  test_settings_services.py  test_settings_users_routes.py  test_validation_error_rendering.py
(+154 files in other folders)
